2005-11-03 13:26  daichi

	* xfce4-session/branches/xfce_4_2/configure.ac,
	  xfce4-session/branches/xfce_4_2/po/sl.po: Added Slovenian
	  translations by Bostjan Spetic <igzebedze@auch.eu.org>.

2005-10-30 07:08  daichi

	* xfce4-session/branches/xfce_4_2/po/ChangeLog: Trimmed and
	  updated.

2005-10-28 12:08  daichi

	* libxfcegui4/branches/xfce_4_2/po/be.po,
	  xfcalendar/branches/xfce_4_2/po/be.po,
	  xfce-mcs-manager/branches/xfce_4_2/po/be.po,
	  xfce-mcs-plugins/branches/xfce_4_2/po/be.po,
	  xfce-utils/branches/xfce_4_2/po/be.po,
	  xfce4-appfinder/branches/xfce_4_2/po/be.po,
	  xfce4-iconbox/branches/xfce_4_2/po/be.po,
	  xfce4-mixer/branches/xfce_4_2/po/be.po,
	  xfce4-panel/branches/xfce_4_2/po/be.po,
	  xfce4-session/branches/xfce_4_2/po/be.po,
	  xfce4-toys/branches/xfce_4_2/po/be.po,
	  xfce4-trigger-launcher/branches/xfce_4_2/po/be.po,
	  xfdesktop/branches/xfce_4_2/po/be.po,
	  xfprint/branches/xfce_4_2/po/be.po,
	  xfwm4/branches/xfce_4_2/po/be.po: Updated Belorussian
	  translations by Ales Nyakhaychyk <nab@mail.by>.

2005-10-21 21:32  daichi

	* xfce4-session/branches/xfce_4_2/po/ChangeLog: Updated (in which
	  unnecessary logs are removed).

2005-10-21 12:07  daichi

	* terminal/trunk/po/ChangeLog, terminal/trunk/po/ja.po,
	  xfce4-panel/trunk/po/ja.po,
	  xfce4-session/branches/xfce_4_2/po/ja.po,
	  xfce4-session/trunk/po/ja.po,
	  xfdesktop/branches/xfce_4_2/po/ja.po, xfdesktop/trunk/po/ja.po,
	  xfwm4/trunk/po/ja.po: Updated Japanese translations.

2005-10-20 23:30  daichi

	* libxfcegui4/trunk/po/it.po,
	  xfce4-appfinder/branches/xfce_4_2/po/it.po,
	  xfce4-mailwatch-plugin/trunk/po/eu.po,
	  xfce4-panel/branches/xfce_4_2/po/it.po,
	  xfce4-session/branches/xfce_4_2/po/it.po: * Modified initial
	  header strings using template by `msginit'. * Modified initial
	  comment strings using template by `msginit'.

2005-10-20 12:37  alex

	* mousepad/trunk/po/it.po, xfce-mcs-manager/trunk/po/it.po,
	  xfce4-appfinder/branches/xfce_4_2/po/it.po,