@@ -1,3 +1,8 @@
+2005-11-30	Benedikt Meurer <benny@xfce.org>
+
+	* settings/session/session.c, settings/splash/splash.c: Backport fix
+	  for bug #1246 to stable branch.
+
 2005-11-03 13:26  daichi
 
 	* xfce4-session/branches/xfce_4_2/configure.ac,
